2007-08-05  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): reinstate select-after-realize;
	it's still necessary

2007-08-05  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Dennis Cranston <dennis_cranston@yahoo.com>

	* data/appearance.glade: Indent category contents, and other HIG
	spacing fixes for "Font Rendering Details" dialog (bug #463332)

2007-08-04  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Dennis Cranston <dennis_cranston@yahoo.com>

        * appearance-style.c: (update_cursor_size_scale) Toggle
        sensitivity of the cursor scale labels (bug #463442)

2007-08-04  Denis Washington  <denisw@svn.gnome.org>

	* appearance-style.c: (prepare_list):
	Only add a "Default Pointer" list item if there is
	no such GnomeThemeCursorInfo.

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_thumbnail_update): oops, remove
	left-over devel ifdef

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_color_changed): use gdk_color_to_string
	instead of g_strdup_printf
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml),
	(gnome_wp_xml_load_list): remove check for old glib version that
	would result in bogus code, and save an unnecessary alloc

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_props_load_wallpaper), (wp_add_image),
	(wp_scale_type_changed), (wp_shade_type_changed),
	(wp_update_preview), (wp_load_stuffs), (desktop_init),
	(desktop_shutdown):
	* appearance-main.c: (init_appearance_data),
	(main_window_response):
	* appearance-themes.c: (theme_get_mtime), (theme_thumbnail_update),
	(theme_get_thumbnail_from_cache), (theme_thumbnail_done_cb),
	(theme_thumbnail_generate):
	* appearance.h:
	* gnome-wp-xml.c: (gnome_wp_load_legacy), (gnome_wp_xml_load_xml):
	use thumbnail factory to store and retrieve metatheme thumbs
	(bug #448968)

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: