@@ -2008,7 +2008,7 @@ Text only</property>
                     <property name="column_spacing">12</property>
                     <property name="row_spacing">12</property>
                     <child>
-                      <widget class="GtkColorButton" id="tooltip_fg_colorbutton">
+                      <widget class="GtkColorButton" id="tooltip_fg_color">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -2023,7 +2023,7 @@ Text only</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkColorButton" id="tooltip_bg_colorbutton">
+                      <widget class="GtkColorButton" id="tooltip_bg_color">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -2044,7 +2044,7 @@ Text only</property>
                         <property name="xalign">0</property>
                         <property name="label" translatable="yes">_Tooltips:</property>
                         <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">tooltip_bg_colorbutton</property>
+                        <property name="mnemonic_widget">tooltip_bg_color</property>
                       </widget>
                       <packing>
                         <property name="top_attach">4</property>
@@ -2055,7 +2055,7 @@ Text only</property>
                       <placeholder/>
                     </child>
                     <child>
-                      <widget class="GtkColorButton" id="selected_fg_colorbutton">
+                      <widget class="GtkColorButton" id="selected_fg_color">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                       </widget>
@@ -2069,7 +2069,7 @@ Text only</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkColorButton" id="text_colorbutton">
+                      <widget class="GtkColorButton" id="text_color">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                       </widget>
@@ -2083,7 +2083,7 @@ Text only</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkColorButton" id="fg_colorbutton">
+                      <widget class="GtkColorButton" id="fg_color">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                       </widget>
@@ -2102,7 +2102,7 @@ Text only</property>
                         <property name="xalign">0</property>
                         <property name="label" translatable="yes">_Selected items:</property>
                         <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">selected_bg_colorbutton</property>
+                        <property name="mnemonic_widget">selected_bg_color</property>
                       </widget>
                       <packing>
                         <property name="top_attach">3</property>
@@ -2110,7 +2110,7 @@ Text only</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkColorButton" id="selected_bg_colorbutton">
+                      <widget class="GtkColorButton" id="selected_bg_color">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                       </widget>
@@ -2124,7 +2124,7 @@ Text only</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkColorButton" id="base_colorbutton">
+                      <widget class="GtkColorButton" id="base_color">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                       </widget>
@@ -2138,7 +2138,7 @@ Text only</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkColorButton" id="bg_colorbutton">
+                      <widget class="GtkColorButton" id="bg_color">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                       </widget>
@@ -2157,7 +2157,7 @@ Text only</property>
                         <property name="xalign">0</property>
                         <property name="label" translatable="yes">_Input boxes:</property>
                         <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">base_colorbutton</property>
+                        <property name="mnemonic_widget">base_color</property>
                       </widget>
                       <packing>
                         <property name="top_attach">2</property>
@@ -2170,7 +2170,7 @@ Text only</property>
                         <property name="xalign">0</property>
                         <property name="label" translatable="yes">_Windows:</property>
                         <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">bg_colorbutton</property>
+                        <property name="mnemonic_widget">bg_color</property>
                       </widget>
                       <packing>
                         <property name="top_attach">1</property>
